--- a/frontend/src/components/Score/Score.css
+++ b/frontend/src/components/Score/Score.css
@@ -2,7 +2,7 @@
     font-size: 36px;
     border-radius: 6px;
     color: white;
-    background-color: #9dae88;
+    background-color: #697a53;
     border: 2px solid;
     border-color: black;
     display: flex;
@@ -12,4 +12,6 @@
     width: fit-content;
     margin-top: 10px;
     padding: 10px;
+
+
 }
